# multimodal-harness

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  SKILL.md  pyproject.toml
.github/workflows/: release-smoke.yml
configs/canonical/: default.json
configs/evaluation/: 0326_1700.json  (+2 more)
develop_docs/: index.md
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  index.md  install.md
scripts/: __init__.py  run_aliyun_transcription.py  run_api.py  run_canonical_atlas.py  run_eval.sh  run_evaluation.py  run_local_example.sh  run_review_app.py  run_task_derivation.py  run_video_atlas.py  smoke_test.sh
tests/: test_agent_boundaries.py  test_application_canonical_create.py  test_asr_api.py  test_canonical_high_efficiency.py  test_canonical_schemes.py  test_canonical_structure_composition.py  test_canonical_two_stage_pipeline.py  test_canonical_workflow_logging.py  test_canonical_workspace_loader.py  test_cli.py  test_config_loading.py  test_derived_pipeline.py  test_evaluation_script.py  test_global_atlas_generation.py  test_import.py  test_message_generation.py  test_multimodal_messages.py  test_no_core_dependency.py  test_planner_prompt.py  test_podcast_to_xhs_render_scripts.py  test_prompts.py  test_response_parsing.py  test_review_app_script.py  test_review_loader.py  test_review_server.py  test_segmentation_streaming.py  test_settings.py  test_skill_install.py  test_source_acquisition_dispatch.py  test_source_acquisition_e2e.py  test_source_acquisition_models.py  test_strategy_builder.py  test_subtitles.py  test_task_derivation.py  test_text_first_canonical_workflow.py  test_transcription.py  test_video_atlas_subtitles.py  test_workspace_writers.py  test_xiaoyuzhou_acquisition.py  test_youtube_acquisition.py
(+221 files in other folders)
