[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-atlas"
version = "0.1.0"
description = "Video parsing pipeline that turns long videos into an LLM-friendly workspace."
readme = "ARCHITECTURE.md"
requires-python = ">=3.10"
dependencies = [
    "json-repair>=0.30.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pydantic>=2,<3",
    "yt-dlp>=2025.3.31",
]

[project.optional-dependencies]
dev = []

[project.scripts]
video-atlas = "video_atlas.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
